--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.6.0",
+    "react-toastify": "^11.0.5",
     "swiper": "^11.2.7",
     "tailwindcss": "^4.1.7"
   },
